customerHomepage.css
/* ... */
.dropdown-options li {
padding: 10px;
white-space: nowrap;
color: #434343
}

.dropdown-options li:last-child {
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.dropdown-options li:first-child {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.dropdown-options li:hover {
    cursor: pointer;
    background-color: #041A40;
    color: #fff;
}

.budget-dropdown {
    position: relative;
    background: #fff;
}

.budget-dropdown .label {
    padding: 15px 20px;
    width: 100%;
    font-size: 0.9rem;
    border-right: 1px solid #000;
}

.budget-dropdown img.rotate {
    transform: rotate(180deg)
}

.budget-dropdown:hover {
    cursor: pointer;
}

.budget-dropdown .label p {
    margin-right: 10px !important;
}

.budget-dropdown .slider-values {
    font-size: 0.9rem;
}

.budget-dropdown .dropdown-options {
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    border: 0.5px solid #606266;
    border-radius: 10px;
    border-top: none;
    padding-left: 0;
    box-shadow: 0 0 10px 0 #00000020;
    transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
}
.budget-dropdown .dropdown-options li {
    padding: 10px;
    width: 100%;
}
.budget-dropdown .dropdown-options li:last-child {
    border-bottom: 0;
}

.budget-dropdown .dropdown-content {
    background-color: #fff;
    position: absolute;
    width: 400px;
    border: 0.5px solid #606266;
    border-radius: 10px;
    padding: 10px;
    z-index: 10;
    box-shadow: 0 0 10px 0 #00000020;
    opacity: 0;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
}

.budget-dropdown .dropdown-options.active {
    display: flex;
    max-height: 300px;
    opacity: 1;
}

.budget-dropdown .dropdown-content.active {
    max-height: 300px;
    opacity: 1;
}

.budget-dropdown input {
    margin: 20px 0 !important;
}
  
  input[type="range"] {
    width: 100%;
    margin: 0;
    -webkit-appearance: none;
    appearance: none;
    background: transparent;
    position: absolute;
    top: 13px;
    left: 0;
    border: none !important;
  }
  
  input[type="range"]::-webkit-slider-runnable-track {
    height: 1.5px;
    background: #606266;
  }
  
  input[type="range"]::-webkit-slider-thumb {
    width: 27px;
    height: 27px;
    background-color: #fff;
    border: 2.5px solid #100F3F;
    border-radius: 50%;
position:relative;
top: -14px;
    cursor: pointer;
    -webkit-appearance: none;
    appearance: none;
    z-index: 10;
  }
  
  .slider-labels {
    margin-top: 30px;
    font-size: 0.9rem;
    
  }
  .slider-labels span {
    display: flex;
    flex-direction:column;
    align-items: center;
    justify-content: center;
    font-size: 0.9rem;
  }
  .slider-labels .line {
    height: 17px;
    width:1px;
    background-color: #606266;
  }

  .properties-categories {
    margin-left: auto;
    margin-right: auto;
  }

  .properties-categories canvas {
    margin: 10px 20px;
    box-shadow: 5px 4px 11px 0 #00000015;
    border-radius: 20px;
    width: 120px;
    height: 100px;
  }

  .properties-categories canvas.hidden {
    display: none;
  }
  .properties-categories canvas:hover {
    cursor: pointer;
  }

/* Section three */
.section-three {
    padding: 20px 0 7% 0;
}

.section-three .video {
    margin: 15px;
    width: 400px !important;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.section-three .video p {
    text-align: left;
    font-size: 0.78rem;
}

.section-three video {
    height: 350px;
    border-radius: 15px;
   box-shadow: 0 4px 4px 0 #00000065;
   margin-left: auto;
   margin-right: auto;
}
.video .volume-container.hidden {
    display: none;
}

.video .volume-icon {
    position:absolute;
    bottom: 70px;
    right: 15px;
}

.volume-up {
    width: 30px;
    height: 30px;
    position: relative;
    cursor: pointer;
}

.bar {
    width: 4px;
    height: 10px;
    background-color: #FFFFFF;
    position: absolute;
    bottom: 5px;
    border-radius: 2px;
    animation: volume 1s infinite ease-in-out;
}

.bar1 {
    left: 6px;
    height: 8px;
    animation-delay: 0.1s;
}

.bar2 {
    left: 14px;
    height: 12px;
    animation-delay: 0.2s;
}

.bar3 {
    left: 22px;
    height: 16px;
    animation-delay: 0.3s;
}

@keyframes volume {
    0%, 100% { transform: scaleY(1); }
    50% { transform: scaleY(1.5); }
}

.video .volume-icon.hidden {
    display: none;
}
.video .volume-icon:hover {
    cursor: pointer;
}
.video .d-flex img:hover {
    background-color: #EDEDED;
    cursor: pointer;
}

.section-three .nav-btn {
    position: absolute;
    top: 40%;
    transform: translateY(-50%);
    background-color: transparent;
    color: #fff;
    border: none;
    cursor: pointer;
    padding: 10px;
    z-index: 10;
}

.section-three .prev-btn {
    left: 10px;
    transform: rotate(90deg)
}

.section-three .next-btn {
    right: 10px;
    transform: rotate(-90deg)
}

/* Section four */

.section-four {
    background-color: #fff;;
    transition: background-color 0.5s ease;
}

.section-four h4 {
    font-size: 1.1rem;
    color: #041A40;
}

.tablet-border-outer {
    border-radius: 25px;
    background: linear-gradient(89.1deg, rgba(15, 70, 166, 0.10) -3.5%, rgba(236, 113, 0, 0.10) 104.41%);
    padding: 20px;
    animation: blink-shadow 3s infinite; 
    width: 1100px;
    margin-left: auto;
    margin-right: auto;
}

@keyframes blink-shadow {
  0%, 100% {
    box-shadow: 0px 0px 80px 5px #EC710044; 
  }
  50% {
    box-shadow: none;
  }
}

.tablet-border-inner {
    border-radius: 15px;
    padding-right: 20px;
    background-color: #ffffff;
    position: relative;
}
/* ... */

